# rox2026

./: .Dockerfile.swp  .cmake-format.yml  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  TASK_HANDOFF.md  a.md  docker-compose.yml
.serena/: project.yml
archive/can_send_node/: CMakeLists.txt  package.xml
archive/can_send_node/config/: config.yaml
archive/can_send_node/include/can_send_node/: can_send_node.hpp
archive/can_send_node/launch/: can_send_node.launch.py
archive/can_send_node/src/: can_send_node.cpp
docs/: rdk-x5-setup.md  (+1 more)
ros2_ws/src/belt_controller/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/belt_controller/config/: config.yaml
ros2_ws/src/belt_controller/include/belt_controller/: belt_controller_node.hpp  joy_button.hpp
ros2_ws/src/belt_controller/src/: belt_controller_node.cpp
ros2_ws/src/hardware_driver/: CMakeLists.txt  package.xml
ros2_ws/src/hardware_driver/include/: edulite05_protcol.hpp
ros2_ws/src/hardware_driver/include/edulite05_driver/: edulite05_protocol.hpp
ros2_ws/src/hardware_driver/include/stm32_driver/: stm32_protocol.hpp
ros2_ws/src/hardware_driver/include/vesc_driver/: vesc_protocol.hpp
ros2_ws/src/hardware_driver/src/nodes/: edulite05_node.cpp  stm32_node.cpp
ros2_ws/src/hardware_driver/src/protcol/: edulite05_protcol.cpp
ros2_ws/src/hardware_driver/src/protocol/: edulite05_protocol.cpp  stm32_protocol.cpp
ros2_ws/src/hardware_driver/src/stm32_driver/: stm32_node.cpp  stm32_protocol.cpp
ros2_ws/src/hardware_driver/src/vesc_driver/: vesc_node.cpp  vesc_protocol.cpp
ros2_ws/src/hardware_driver/test/: test_vesc_protocol.cpp
ros2_ws/src/imu_bno055/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/imu_bno055/include/imu_bno055/: bno055.hpp  bno055_data.hpp  bno055_reg.hpp
ros2_ws/src/imu_bno055/src/: bno055.cpp  imu_node.cpp
ros2_ws/src/mecanum_controller/: CMakeLists.txt  package.xml
ros2_ws/src/mecanum_controller/config/: params.yaml
ros2_ws/src/mecanum_controller/launch/: macanum.launch.py  mecanum.launch.py
ros2_ws/src/mecanum_controller/src/: base_controller.cpp  base_controller_node.cpp  main.cpp  mecanum_controller_node.cpp
ros2_ws/src/motor_can_bridge/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/motor_can_bridge/config/: config.yaml
ros2_ws/src/motor_can_bridge/launch/: mabuchi_can_bridge.launch.py  mabuchi_can_command.launch.py  mad_motor_can_bridge.launch.py  mad_motor_can_command.launch.py  motor_can_bridge.launch.py  motor_can_command.launch.py  motor_can_packer.launch.py
ros2_ws/src/motor_can_bridge/msg/: CanFrame.msg
ros2_ws/src/motor_can_bridge/src/: motor_can_bridge_node.cpp  motor_can_command_node.cpp  motor_can_packer_node.cpp
ros2_ws/src/receive_stm32/: CMakeLists.txt  package.xml
ros2_ws/src/receive_stm32/config/: parameter.yml
ros2_ws/src/receive_stm32/launch/: limit_sw.launch.py
ros2_ws/src/receive_stm32/rox2026/: .gitignore  Dockerfile  LICENSE  README.md
ros2_ws/src/receive_stm32/src/: receive_stm32_node.cpp
ros2_ws/src/robot_bringup/: ,.+1!  CMakeLists.txt  README.md  package.xml
ros2_ws/src/robot_bringup/config/: belt_controller.yaml  dribble_controller.yaml  dribble_position_controller.yaml  edulite05_driver.yaml  joy.yaml  joy_controller.yaml  joy_conversion.yaml  joy_conversion_node.yaml  mad_motor.yaml  mecanum_controller.yaml  robstride05.yaml  roller_angle.yaml  roller_belt.yaml  spring_controller.yaml  spring_param.yaml  stm32_driver.yaml  stm32_node_param.yaml  vesc_node_param.yaml
ros2_ws/src/robot_bringup/launch/: base.launch.py  belt_controller.launch.py  can.launch.py  controllers.launch.py  dribble_controller.launch.py  dribble_position_controller.launch.py  edulite05.launch.py  hardware.launch.py  hardware_joy.launch.py  interface.launch.py  joy.launch.py  joy_controller.launch.py  mad_motor.launch.py  mecanum.launch.py  mecanum_controller.launch.py  robot.launch.py  robstride05.launch.py  roller_angle.launch.py  roller_belt.launch.py  spring.launch.py  spring_controller.launch.py  upper.launch.py  vesc.launch.py
ros2_ws/src/robot_controller/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/robot_controller/action/: DribblePosition.action
ros2_ws/src/robot_controller/msg/: RobotCommand.msg
ros2_ws/src/robot_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/robstride_can/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/robstride_can/config/: robstride_velocity.yaml
ros2_ws/src/robstride_can/launch/: robstride_velocity.launch.py
ros2_ws/src/robstride_can/src/: robstride_velocity_node.cpp
ros2_ws/src/robstride_can_node/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/robstride_can_node/config/: config.yaml
ros2_ws/src/robstride_can_node/launch/: robstride_can_node.launch.py  robstride_position.launch.py  robstride_velocity.launch.py
ros2_ws/src/robstride_can_node/src/: robstride_can_node.cpp
ros2_ws/src/roller_angle_controller/: CMakeLists.txt  package.xml
ros2_ws/src/roller_angle_controller/config/: roller_config.yaml  roller_position.yaml
ros2_ws/src/roller_angle_controller/launch/: roller_position.launch.py
ros2_ws/src/roller_angle_controller/src/: roller_angle_controller.cpp
ros2_ws/src/roller_belt_can_packer/: CMakeLists.txt  package.xml
ros2_ws/src/roller_belt_can_packer/src/: roller_belt_can_packer_node.cpp
ros2_ws/src/spring_controller/: CMakeLists.txt  package.xml  spring_launch.py
ros2_ws/src/spring_controller/config/: spring_param.yaml  spring_param_test.yaml
ros2_ws/src/spring_controller/launch/: spring_launch.py  spring_launch_test.py
ros2_ws/src/spring_controller/src/: motor.cpp  spring_cal_motor_pub.cpp  spring_edulite_controller.cpp  spring_joy_sub.cpp  subscriber.cpp
ros2_ws/src/stm_can_send/: CMakeLists.txt  package.xml
ros2_ws/src/stm_can_send/config/: config.yaml
ros2_ws/src/stm_can_send/launch/: stm_can_send.launch.py
ros2_ws/src/stm_can_send/src/: stm_can_send.cpp
ros2_ws/src/wheel_to_can/: CMakeLists.txt  package.xml
ros2_ws/src/wheel_to_can/config/: params.yaml
ros2_ws/src/wheel_to_can/src/: wheel_to_can_node.cpp
(+168 files in other folders)
