<?xml version="1.0"?>
<package format="3">
  <name>belt_controller</name>
  <version>0.0.0</version>
  <description>Belt controller node using Joy input.</description>
  <maintainer email="shuhei2.1129@gmail.com">ponqoo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
