<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="abe.mitsunobu2188@mail.kyutech.jp">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>joy_conversion</exec_depend>
  <exec_depend>roller_angle_controller</exec_depend>
  <exec_depend>robstride_can_node</exec_depend>
  <exec_depend>belt_controller</exec_depend>
  <exec_depend>roller_belt_can_packer</exec_depend>
  <exec_depend>ros2socketcan_bridge</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
